did some changes

--- a/index.html
+++ b/index.html
@@ -18,14 +18,15 @@
         <input type="text" id="name" name="name" required <br />
         <h3>Instructions</h3>
 
-        <p>Use the left and right arrow keys to move Bear</p>
+        <p>Use the left and right arrow keys to play..</p>
+        <p><em>You have to collect 10 coins to win the game</em></p>
         <button id="start-button">START</button>
       </div>
 
       <div id="game-container">
         <div>
           <h2>Stats</h2>
-          <p>Coins: <span id="coins">0</span></p>
+          <p>Coins: <span class="coins">0</span></p>
         </div>
         <!-- #game-screen is initially hidden using CSS style display: none -->
         <div id="game-screen">
